@@ -248,3 +248,6 @@ Thu Sep 09 12:00:00 2002 <ddouxchamps@users.sf.net>
 
 Thu Sep 10-11 12:00:00 2002 <ddouxchamps@users.sf.net>
     * even more v1.30 handshake update (now with proper error handling)
+
+Thu Sep 22 17:30:00 2002 <ddouxchamps@users.sf.net>
+    * added absolute feature setting functions. This is a first hack. 
